--- a/app/views/analyses/_chartLineCa.html.erb
+++ b/app/views/analyses/_chartLineCa.html.erb
@@ -1,31 +1,30 @@
 
   <div class="chartBox mx-auto">
-    <canvas id="myChartLineCa"></canvas>
+    <canvas id="myChartLinePaiements"></canvas>
   </div>
 
   <%# @data = Article.group('DATE(created_at)').sum('total') %>
 
-
 <script>
 
-  var couleur1 = 'rgb(116, 159, 130)';
-  var couleur2 = 'rgb(66, 95, 87)';
+  var couleur1 = 'rgb(213, 155, 19)';
+  var couleur2 = 'rgb(240, 214, 83)';
 
 // CHART BAR
-    var dataLineCa = {
+    var dataLinePaiements = {
       datasets: [{
         data: <%= @groupedByDateCa.to_json.html_safe %>,
         fill: true,
-        backgroundColor: [couleur2, couleur1 ],
+        backgroundColor: [couleur1, couleur2 ],
         borderWidth: 1
       }]
     };
 
-    var delayedLineCa;
+    var delayedLinePaiements;
 
-    var configLineCa = {
+    var configLinePaiements = {
       type: 'line',
-      data: dataLineCa,
+      data: dataLinePaiements,
       options: {
 
         plugins: {
@@ -57,9 +56,9 @@
       };
 
         // render init block
-    var myChartLineCa = new Chart(
-      document.getElementById('myChartLineCa'),
-      configLineCa
+    var myChartLinePaiements = new Chart(
+      document.getElementById('myChartLinePaiements'),
+      configLinePaiements
     );
   
 </script>
