--- a/app/views/analyses/_chartLineTransactions.html.erb
+++ b/app/views/analyses/_chartLineTransactions.html.erb
@@ -1,30 +1,31 @@
 
   <div class="chartBox mx-auto">
-    <canvas id="myChartLinePaiements"></canvas>
+    <canvas id="myChartLineCa"></canvas>
   </div>
 
   <%# @data = Article.group('DATE(created_at)').sum('total') %>
 
+
 <script>
 
-  var couleur1 = 'rgb(213, 155, 19)';
-  var couleur2 = 'rgb(240, 214, 83)';
+  var couleur1 = 'rgb(116, 159, 130)';
+  var couleur2 = 'rgb(66, 95, 87)';
 
 // CHART BAR
-    var dataLinePaiements = {
+    var dataLineCa = {
       datasets: [{
-        data: <%= @groupedByDatePaiements.to_json.html_safe %>,
+        data: <%= @groupedByDateTransactions.to_json.html_safe %>,
         fill: true,
-        backgroundColor: [couleur1, couleur2 ],
+        backgroundColor: [couleur2, couleur1 ],
         borderWidth: 1
       }]
     };
 
-    var delayedLinePaiements;
+    var delayedLineCa;
 
-    var configLinePaiements = {
+    var configLineCa = {
       type: 'line',
-      data: dataLinePaiements,
+      data: dataLineCa,
       options: {
 
         plugins: {
@@ -56,9 +57,9 @@
       };
 
         // render init block
-    var myChartLinePaiements = new Chart(
-      document.getElementById('myChartLinePaiements'),
-      configLinePaiements
+    var myChartLineCa = new Chart(
+      document.getElementById('myChartLineCa'),
+      configLineCa
     );
   
 </script>
