--- a/app/views/analyses/_chartPieCa.html.erb
+++ b/app/views/analyses/_chartPieCa.html.erb
@@ -1,24 +1,24 @@
 
   <div class="chartBox mx-auto">
-    <canvas id="myChartPieCa"></canvas>
+    <canvas id="myChartPiePaiements"></canvas>
   </div>
 
-  <% @data = [@totalLoc, @totalVente] %>
+  <% @data = [@totalPrixCa, @totalCautionCa] %>
  
 <script>
-  var couleur1 = 'rgb(116, 159, 130)';
-  var couleur2 = 'rgb(66, 95, 87)';
+  var couleur1 = 'rgb(213, 155, 19)';
+  var couleur2 = 'rgb(240, 214, 83)';
 
-  var nbTotalCa = <%= @totalCa %>;
+  var nbTotalPaiements = <%= @totalCa %>;
 
-  var centerTextDoghnutCa = {
+  var centerTextDoghnutPaiements = {
     id: 'centerTextDoghnutCa',
     afterDatasetsDraw(chart, args, pluginOptions){
       const { ctx } = chart;
       ctx.textAlign = "center";
       ctx.textBaseline = "middle";
       ctx.font = "bold 12px sans-serif";
-      const text = "TTC: " + nbTotalCa + " - HT: " +  Math.round(nbTotalCa / 1.2);
+      const text = "total " + nbTotalPaiements ;
       const textWidth = ctx.measureText(text).width;
       const x = chart.getDatasetMeta(0).data[0].x;
       const y = chart.getDatasetMeta(0).data[0].y;
@@ -26,8 +26,8 @@
     }
   }
 
-   var dataPieCa = {
-      labels: ['location', 'vente'],
+   var dataPiePaiements = {
+      labels: ['Prix', 'Caution'],
       datasets: [{
         data: <%= @data.to_json.html_safe %>,
         fill: true,
@@ -36,10 +36,10 @@
       }]
     };
 
-    var configPieCa = {
+    var configPiePaiements = {
       type: 'doughnut',
           data: {
-            labels: ['location', 'vente'],
+            labels: ['Prix', 'Caution'],
             datasets: [{
               data: <%= @data.to_json.html_safe %>,       
               backgroundColor: [ couleur1, couleur2 ],
@@ -61,12 +61,12 @@
             },
 
           },
-          plugins: [centerTextDoghnutCa]
+          plugins: [centerTextDoghnutPaiements]
         };
 
-  var myChartPieCa = new Chart(
-    document.getElementById('myChartPieCa'),
-    configPieCa
+  var myChartPiePaiements = new Chart(
+    document.getElementById('myChartPiePaiements'),
+    configPiePaiements
   );
 
 </script>
