--- a/app/views/analyses/_chartPieTransactions.html.erb
+++ b/app/views/analyses/_chartPieTransactions.html.erb
@@ -1,24 +1,24 @@
 
   <div class="chartBox mx-auto">
-    <canvas id="myChartPiePaiements"></canvas>
+    <canvas id="myChartPieCa"></canvas>
   </div>
 
-  <% @data = [@totalPrix, @totalCaution] %>
+  <% @data = [@totalTransactionsLoc, @totalTransactionsVente] %>
  
 <script>
-  var couleur1 = 'rgb(213, 155, 19)';
-  var couleur2 = 'rgb(240, 214, 83)';
+  var couleur1 = 'rgb(116, 159, 130)';
+  var couleur2 = 'rgb(66, 95, 87)';
 
-  var nbTotalPaiements = <%= @totalPaiements %>;
+  var nbTotalCa = <%= @totalTransactions %>;
 
-  var centerTextDoghnutPaiements = {
+  var centerTextDoghnutCa = {
     id: 'centerTextDoghnutCa',
     afterDatasetsDraw(chart, args, pluginOptions){
       const { ctx } = chart;
       ctx.textAlign = "center";
       ctx.textBaseline = "middle";
       ctx.font = "bold 12px sans-serif";
-      const text = "total " + nbTotalPaiements ;
+      const text = "TTC: " + nbTotalCa + " - HT: " +  Math.round(nbTotalCa / 1.2);
       const textWidth = ctx.measureText(text).width;
       const x = chart.getDatasetMeta(0).data[0].x;
       const y = chart.getDatasetMeta(0).data[0].y;
@@ -26,8 +26,8 @@
     }
   }
 
-   var dataPiePaiements = {
-      labels: ['Prix', 'Caution'],
+   var dataPieCa = {
+      labels: ['location', 'vente'],
       datasets: [{
         data: <%= @data.to_json.html_safe %>,
         fill: true,
@@ -36,10 +36,10 @@
       }]
     };
 
-    var configPiePaiements = {
+    var configPieCa = {
       type: 'doughnut',
           data: {
-            labels: ['Prix', 'Caution'],
+            labels: ['location', 'vente'],
             datasets: [{
               data: <%= @data.to_json.html_safe %>,       
               backgroundColor: [ couleur1, couleur2 ],
@@ -61,12 +61,12 @@
             },
 
           },
-          plugins: [centerTextDoghnutPaiements]
+          plugins: [centerTextDoghnutCa]
         };
 
-  var myChartPiePaiements = new Chart(
-    document.getElementById('myChartPiePaiements'),
-    configPiePaiements
+  var myChartPieCa = new Chart(
+    document.getElementById('myChartPieCa'),
+    configPieCa
   );
 
 </script>
