--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -34,6 +34,6 @@
     
 <%= render_dashboard_section("Commandes", ["chartPieCommandes", "chartBarCommandes", "chartLineCommandes"]) %>
 <%= render_dashboard_section("Articles", ["chartPieArticles", "chartBarArticles", "chartLineArticles"]) %>
+<%= render_dashboard_section("Transactions", ["chartPieTransactions", "chartBarTransactions", "chartLineTransactions"]) %>
 <%= render_dashboard_section("Chiffre d'affaires", ["chartPieCa", "chartBarCa", "chartLineCa"]) %>
-<%= render_dashboard_section("Paiements", ["chartPiePaiements", "chartBarPaiements", "chartLinePaiements"]) %>
 
