--- a/app/views/shared/doc_entete.html.erb
+++ b/app/views/shared/doc_entete.html.erb
@@ -4,5 +4,5 @@
 </head>
 
 <div style="width: 900px; display: inline-block; text-align: center;">
-    <%= wicked_pdf_image_tag asset_url('/images/logo_courant_public.png'), style: 'display: inline-block;' %>
+    <%= wicked_pdf_image_tag asset_url('/images/logo_courant_public.png'), style: 'height: 120px; display: inline-block;' %>
 </div>
