--- a/app/views/analyses/_chartPieCa.html.erb
+++ b/app/views/analyses/_chartPieCa.html.erb
@@ -3,13 +3,15 @@
     <canvas id="myChartPiePaiements"></canvas>
   </div>
 
-  <% @data = [@totalPrixCa, @totalCautionCa] %>
- 
-<script>
-  var couleur1 = 'rgb(213, 155, 19)';
-  var couleur2 = 'rgb(240, 214, 83)';
+  <% @data = [@totalPrixCaCb, @totalPrixCaEspeces, @totalPrixCaCheque, @totalPrixCaVirement] %>
 
-  var nbTotalPaiements = <%= @totalCa %>;
+<script>
+  var couleur1 = 'rgb(20, 63, 169)';
+  var couleur2 = 'rgb(20, 169, 74)';
+  var couleur3 = 'rgb(160, 155, 155)';
+  var couleur4 = 'rgb(251, 247, 39)';
+
+  var nbTotalPaiements = <%= @totalPrixCa %>;
 
   var centerTextDoghnutPaiements = {
     id: 'centerTextDoghnutCa',
@@ -27,11 +29,11 @@
   }
 
    var dataPiePaiements = {
-      labels: ['Prix', 'Caution'],
+      labels: ['CB', 'Espèces', 'Chèque', 'Virement'],
       datasets: [{
         data: <%= @data.to_json.html_safe %>,
         fill: true,
-        backgroundColor: [ couleur1, couleur2 ],
+        backgroundColor: [ couleur1, couleur2, couleur3, couleur4 ],
         borderWidth: 1
       }]
     };
@@ -39,10 +41,10 @@
     var configPiePaiements = {
       type: 'doughnut',
           data: {
-            labels: ['Prix', 'Caution'],
+            labels: ['CB', 'Espèces', 'Chèque', 'Virement'],
             datasets: [{
               data: <%= @data.to_json.html_safe %>,       
-              backgroundColor: [ couleur1, couleur2 ],
+              backgroundColor: [ couleur1, couleur2, couleur3, couleur4 ],
               hoverOffset: 40,
               borderWidth: 1,
               cutout: '50%'
