--- a/app/views/fournisseurs/_produits.html.erb
+++ b/app/views/fournisseurs/_produits.html.erb
@@ -2,12 +2,12 @@
 <div class="card mx-2 mb-3 light-beige-colored shadow-sm p-2">
 
     <div class="card-header fw-bold">
-        synthèse
+        synthèse générale
     </div>
 
     <div class="card-body">
         nb ref produits: <%= @produits.count %> <br>
-        total achat HT: <%= @produits.sum(:prixachat) %> <br>
+        total achat HT: <%= @total_prixachat_sum %> <br>
 
         <hr>
 
