fix footer mailer commande

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -4,10 +4,9 @@
 <div class="card bg-success">   
 
 
-  <%= button_to 'Envoyer mail', send_reminder_path(meeting: @meeting), 
+  <%#= button_to 'Envoyer mail', send_reminder_path(meeting: @meeting), 
         method: :post, class: 'btn m-1 btn-primary fw-bold' %>
-
-  <%= button_to 'Send Reminder (Job)', send_reminder_job_path(meeting: @meeting), method: :post, class: 'btn btn-warning' %>
+  <%#= button_to 'Send Reminder (Job)', send_reminder_job_path(meeting: @meeting), method: :post, class: 'btn btn-warning' %>
 
 </div>
 
