--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,9 +1,18 @@
-<%= yield %>
 
-<div style="margin-top: 20px; border-top: 1px solid #ddd; padding-top: 10px; font-size: 12px; color: #888;">
+<!DOCTYPE html>
+<html>
+  <body>
+    <%= yield %>
+    <hr>
+    <footer>
+      <div style="margin-top: 20px; border-top: 1px solid #ddd; padding-top: 10px; font-size: 12px; color: #888;">
 
-  <p>Autour d'un soir - Cannes</p>
+        <p>Autour d'un soir - Cannes</p>
 
-  <p>04 93 00 00 00</p>
-  <p><a href="https://example.com">https://example.com</a></p>
-</div>
+        <p>04 93 00 00 00</p>
+        <p><a href="https://example.com">https://example.com</a></p>
+      </div>
+
+    </footer>
+  </body>
+</html>
