--- a/app/views/meeting_mailer/reminder_email.html.erb
+++ b/app/views/meeting_mailer/reminder_email.html.erb
@@ -11,6 +11,8 @@
 
   </body>
 
-  <%= render 'shared/mailer_footer' %>
+  <footer>
+    <%= render 'shared/mailer_footer' %>
+  </footer>
 
 </html>
