--- a/app/views/commande_mailer/email_commande.html.erb
+++ b/app/views/commande_mailer/email_commande.html.erb
@@ -12,6 +12,8 @@
     
   </body>
 
-  <%= render 'shared/mailer_footer' %>
+  <footer>
+    <%= render 'shared/mailer_footer' %>
+  </footer>
 
 </html>
