filtering and fixing frs

--- a/app/views/commandes/_footer.html.erb
+++ b/app/views/commandes/_footer.html.erb
@@ -9,10 +9,10 @@
 
             <%#= custom_badge("", @commande.client.full_name, "secondary", "") %>
         </div>
-        <div class="col-6 text-center">
+        <div class="col-7 text-center p-0">
             <%= render 'synthese' %>
         </div>
-        <div class="col text-end">
+        <div class="col-2 text-end">
             <button class="btn btn-primary fa fa-bounce" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
                 <i class="fa fa-file"></i>
                 <span class="d-none d-md-inline ms-1">editer</span>
