--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   <body>
     <%= render "shared/navbar_admin" %>
 
-    <div class="d-flex justify-content-center align-items-center">
+    <div class="d-flex justify-content-center align-items-center mb-3">
       <div class="page-max-widthed">
         <main class="p-2">
           <div id="flash" class="mt-4" style="z-index: 10;">
