--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg light-beige-colored shadow-sm">
+<nav class="navbar sticky-top navbar-expand-lg light-beige-colored shadow-sm">
   <div class="container-fluid">
     <%= link_to image_tag('/images/logo_courant_public.png', class: 'navbar-brand me-4', width: "200"), root_path %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
