--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,15 +1,8 @@
 <div id="<%= dom_id client %>"class="my-2">
-
   <div class="card mx-2 mb-3 light-beige-colored shadow-sm">
-    <div class="card-body p-0">
-      <div class="row g-0">
-        <div data-turbo="false" class="col-2 p-2 d-flex align-items-center justify-content-center">
-          <%= link_to client_path(client) do %>
-            <i class="fa fa-user text-secondary fa-4x"></i>
-          <% end %>
-        </div>
-        <div class="col-10 d-flex flex-column p-2">
-          <h5 class="card-title">
+    <div class="card-body p-1">
+
+        <div class="card-title d-flex">
           <div data-turbo="false">
             <%= link_to client_path(client), class: "text-decoration-none text-dark" do %>
               <%= client.prenom %>
@@ -17,20 +10,18 @@
             <% end %>
           </div>
         
-            <%= client.propart %>
+          <%= client.propart %>
 
-            <%= link_to "", "#collapseClient#{dom_id(client)}", 
-                  class: "btn btn-sm btn-outline-primary fa-solid fa-eye m-1", "data-bs-toggle": "collapse", 
-                  role: "button", "aria-expanded": "false", "aria-controls": "collapseClient#{dom_id(client)}" %>
+          <%= link_to "", "#collapseClient#{dom_id(client)}", 
+                class: "btn btn-sm btn-outline-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
+                role: "button", "aria-expanded": "false", "aria-controls": "collapseClient#{dom_id(client)}" %>
 
-          </h5>
-
-          <div class="text-end">
-            <%= links_record(client) %>  
-          </div>
         </div>
 
-      </div>
+        <div class="text-end">
+          <%= links_record(client) %>  
+        </div>
+
   
       <div class="collapse px-2" id="collapseClient<%= dom_id(client) %>">
 
