--- a/app/views/commandes/_commande.html.erb
+++ b/app/views/commandes/_commande.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id commande %>"class="mb-2">
 
-  <div class="card mx-2 mb-3 p-3 light-beige-colored shadow-sm">
+  <div class="card mx-2 mb-3 p-1 light-beige-colored shadow-sm">
     
     <div class="row">
       <div data-turbo="false" class="col-10">
@@ -18,7 +18,7 @@
             class: "btn btn-sm btn-outline-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
             role: "button", "aria-expanded": "false", "aria-controls": "collapseCommande#{dom_id(commande)}" %>
 
-          <div class="my-2">
+          <div class="my-2 p-1">
             <%= render partial: 'commandes/toggles_statut', locals: { commande: commande } %>
           </div>
 
