--- a/app/views/home_admin/index.html.erb
+++ b/app/views/home_admin/index.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="col-md-6 m-0 p-0">
       <%= dashboard_card("Commandes", commandes_path, new_commande_path, 'file',
-            @commandes.order(updated_at: :desc).map { |commande| { text: commande.full_name, path: commande_path(commande) } } )  %>
+            @commandes.order(updated_at: :desc).map { |commande| { text: commande.full_name_with_client, path: commande_path(commande) } } )  %>
     </div>
   </div>
 
