change on etiquette pdf

--- a/app/views/etiquettes/edition.html.erb
+++ b/app/views/etiquettes/edition.html.erb
@@ -13,7 +13,7 @@
 
                 <!-- Header Section (Image) -->
                 <div class="text-center" style="height: 410px; padding: 10px; box-sizing: border-box; overflow: hidden;">
-                  <%= image_tag(produit.default_image, class: "img-fluid text-center") %>
+                  <%#= image_tag(produit.default_image, class: "img-fluid text-center") %>
 
                   <% if produit.image1.present? %>
                     <%= image_tag(produit.image1, class: "img-fluid") %>                    
