fixing doc table on ensemble - fixing error on create meeting

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -29,7 +29,6 @@
                 data: { action: "change->date-fields#updateDateFin", date_fields_target: "datedebut" } %>
         </div>
 
-
         <div class="input-group mb-1">
           <%= form.label :datefin, class: "input-group-text label-with-format" %>
           <%= form.datetime_field :datefin, class: "form-control m-1 p-1",
@@ -38,29 +37,24 @@
 
       </div>
 
-    <%# meeting depuis client %>
+    <%# meeting depuis commande ou client %>
+    <% if defined?(client_id) || defined?(commande_id)  %>
 
-    <% if @client %>
-      <%= form.hidden_field :client_id, value: @client&.id %>
+      <%= form.hidden_field :client_id, value: defined?(client_id) ? client_id : "" %>
+      <%= form.hidden_field :commande_id, value: defined?(commande_id) ? commande_id : "" %>
 
-    <%# meeting depuis commande %>
-    <% elsif @commande %>
-      <%= form.hidden_field :commande_id, value: @commande&.id %>
-
-    <% else %>
     <%# meeting depuis meeting %>
+    <% else %>
         <div class="input-group mb-1">
+          <%= form.label :commande_id, class: "input-group-text" %>
+          <%= form.select :commande_id, 
+            options_for_select(Commande.all.order(:nom).pluck(:nom, :id)),
+            { include_blank: 'Select' },  { class: "form-select" } %>
 
-        <%= form.label :commande_id, class: "input-group-text" %>
-        <%= form.select :commande_id, 
-          options_for_select(Commande.all.order(:nom).pluck(:nom, :id)),
-          { include_blank: 'Select' },  { class: "form-select" } %>
-
-        <%= form.label :client_id, class: "input-group-text" %>
-        <%= form.select :client_id, 
-          options_for_select(Client.all.order(:nom).pluck(:nom, :id)),
-          { include_blank: 'Select' },  { class: "form-select" } %>
-
+          <%= form.label :client_id, class: "input-group-text" %>
+          <%= form.select :client_id, 
+            options_for_select(Client.all.order(:nom).pluck(:nom, :id)),
+            { include_blank: 'Select' },  { class: "form-select" } %>
       </div>
     <% end %>
 
