--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,8 +1,9 @@
 <%= bandeau_entete_simple("Nouveau rendez-vous", "calendar") %>
 
-<%= render "form", meeting: @meeting %>
+<%= render partial: 'meetings/form', locals: { commande_id: nil, client_id: nil, meeting: Meeting.new } %>
+
+
 
 <br>
 
 <%= return_model_index_button("Retour vers rendez-vous", meetings_path) %>
-
