--- a/app/views/commandes/_commande.html.erb
+++ b/app/views/commandes/_commande.html.erb
@@ -24,10 +24,9 @@
 
         <% end %>
 
-
       </div>
       <div class="col-2 text-end">
-        <%= links_record(commande) %>  
+        <%= links_record(commande, turbo_delete: true) %>
       </div>
 
       <div class="collapse" id="collapseCommande<%= dom_id(commande) %>">
