--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -4,6 +4,5 @@
 
 <br>
 
-<div>
-  <%= link_to "Back to clients", clients_path %>
-</div>
+<%= return_model_index_button("Clients", clients_path) %>
+
