--- a/app/views/commandes/new.html.erb
+++ b/app/views/commandes/new.html.erb
@@ -4,6 +4,4 @@
 
 <br>
 
-<div>
-  <%= link_to "Back to commandes", commandes_path %>
-</div>
+<%= return_model_index_button("Commandes", commandes_path) %>
