--- a/app/views/produits/_form.html.erb
+++ b/app/views/produits/_form.html.erb
@@ -19,31 +19,37 @@
         <%= image_tag(produit.default_image, class: "img-fluid rounded") %>
       </div>
 
-      <%= custom_form_elements(form, 
-        [:nom, :text_field] ) %>
 
       <div class="container-fluid">
-        <div class="input-group input-group mb-1">
+        
+        <%= custom_form_elements(form, 
+          [:nom, :text_field] ) %>
+
+      <div class="mx-1">
+      
+        <div class="input-group mb-1">
           <%= form.label :categorie_produit_id, class: "input-group-text" %>
           <%= form.collection_select :categorie_produit_id, @categorie_produits.all.order(:nom), :id, :nom, 
-          { include_blank: 'Sélectionner' }, class: "form-select" %>
+          { include_blank: '' }, class: "form-select" %>
         </div>
 
-        <div class="input-group input-group mb-1">
+        <div class="input-group mb-1">
           <%= form.label :type_produit_id, class: "input-group-text" %>
           <%= form.collection_select :type_produit_id, @type_produits.all.order(:nom), :id, :nom, 
-          { include_blank: 'Sélectionner' }, class: "form-select" %>
+          { include_blank: '' }, class: "form-select" %>
         </div>
 
-        <div class="input-group input-group mb-1">
+        <div class="input-group mb-1">
           <%= form.label :prixvente, "prix vente TTC", class: "input-group-text" %>
           <%= form.number_field :prixvente, step: "any", class: "form-control" %>
         </div>
 
-        <div class="input-group input-group mb-1">
+        <div class="input-group mb-1">
           <%= form.label :prixlocation, "prix location TTC", class: "input-group-text" %>
           <%= form.number_field :prixlocation, step: "any", class: "form-control" %>
         </div>
+      
+      </div>
 
         <%= custom_form_elements(form, 
           [:description, :text_area], 
@@ -51,13 +57,15 @@
           [:dateachat, :date_field]
         ) %>
 
+      <div class="mx-1">
+
         <div class="input-group mb-1">
           <%= form.label :fournisseur_id, class: "input-group-text" %>
           <%= form.collection_select :fournisseur_id, @fournisseurs.all.order(:nom), :id, :nom, 
           { include_blank: 'Sélectionner' }, class: "form-select" %>
         </div>
 
-        <div class="input-group input-group mb-1">
+        <div class="input-group mb-1">
           <%= form.label :prixachat, "prix achat HT", class: "input-group-text" %>
           <%= form.number_field :prixachat, class: "form-control" %>
         </div>
@@ -84,7 +92,8 @@
           <%= form.collection_select :taille_id, @tailles.all.order(:nom), :id, :nom, 
           { include_blank: 'Sélectionner' }, class: "form-select" %>
         </div>
-
+      </div>
+      
         <%= custom_form_elements(form, 
           [:actif, :check_box]
         ) %>
