--- a/app/views/produits/_stock.html.erb
+++ b/app/views/produits/_stock.html.erb
@@ -6,12 +6,18 @@
     </div>
 
     <div class="card-body">         
-        <p> Total produits : <span class="fw-bold"> <%= total_produits(extract_ids(@produit)) %> </span> </p> 
+        <p> Stock initial : <span class="fw-bold"> <%= total_produits(extract_ids(@produit)) %> </span> </p> 
         <p> Total loués : <span class="fw-bold"> <%= total_loues(extract_ids(@produit)) %> </span> </p> 
         <p> Total vendus : <span class="fw-bold"> <%= total_vendus(extract_ids(@produit)) %> </span> </p> 
         <p> Restant : <span class="fw-bold"> <%= produits_restants(extract_ids(@produit), Time.now.to_date) %> </span> </p> 
 
         <%= badge_disponibilite(@produit, Time.now.to_date) %>
+
+        <p>
+           pour tests: <br>
+           loc terminées a date:  <%= locations_terminees_a_date(extract_ids(@produit), Time.now.to_date) %>
+
+        </p>
 
     </div>
 </div>
